# autonomous_vehicle

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
autonomous_vehicle/: astar.py
config/: control.yaml
include/autonomous_vehicle/: car.hpp
launch/: competition.launch.py  debug.launch.py  display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
scripts/: camera.py  key_board.py  path.txt  publisher.cpp  waypoint.py
src/: car.cpp  main.cpp  project.cpp
urdf/: prius.urdf.xacro
worlds/: empty_world.world  simple_city.world
